# LaPhoto-cpp

./: CMakeLists.txt  README.md  main.cpp
include/: algorithm.h  channel_mixer.h  convert.h
src/: algorithm.cpp  channel_mixer.cpp  convert.cpp
